// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searcher generateMQuery generates aggs with campus filters applied 1`] = `
[
  {
    "aggregations": undefined,
    "from": 0,
    "query": {
      "bool": {
        "filter": {
          "bool": {
            "should": [
              {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "sections",
                      },
                    },
                    {
                      "term": {
                        "class.termId": "202030",
                      },
                    },
                    {
                      "terms": {
                        "sections.campus.keyword": [
                          "Online",
                          "Boston",
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
        "minimum_should_match": 0,
        "must": [],
        "should": {
          "multi_match": {
            "fields": [
              "class.name^2",
              "class.name.autocomplete",
              "class.subject^4",
              "class.classId^3",
              "sections.profs",
              "sections.crn",
              "employee.name^2",
              "employee.email",
              "employee.phone",
            ],
            "query": "fundies",
            "type": "most_fields",
          },
        },
      },
    },
    "size": 10,
    "sort": [
      "_score",
      {
        "class.classId.keyword": {
          "order": "asc",
          "unmapped_type": "keyword",
        },
      },
    ],
  },
  {
    "aggregations": {
      "nupath": {
        "terms": {
          "field": "class.nupath.keyword",
          "size": 1000,
        },
      },
    },
    "from": 0,
    "query": {
      "bool": {
        "filter": {
          "bool": {
            "should": [
              {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "sections",
                      },
                    },
                    {
                      "term": {
                        "class.termId": "202030",
                      },
                    },
                    {
                      "terms": {
                        "sections.campus.keyword": [
                          "Online",
                          "Boston",
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
        "minimum_should_match": 0,
        "must": [],
        "should": {
          "multi_match": {
            "fields": [
              "class.name^2",
              "class.name.autocomplete",
              "class.subject^4",
              "class.classId^3",
              "sections.profs",
              "sections.crn",
              "employee.name^2",
              "employee.email",
              "employee.phone",
            ],
            "query": "fundies",
            "type": "most_fields",
          },
        },
      },
    },
    "size": 0,
    "sort": [
      "_score",
      {
        "class.classId.keyword": {
          "order": "asc",
          "unmapped_type": "keyword",
        },
      },
    ],
  },
  {
    "aggregations": {
      "subject": {
        "terms": {
          "field": "class.subject.keyword",
          "size": 1000,
        },
      },
    },
    "from": 0,
    "query": {
      "bool": {
        "filter": {
          "bool": {
            "should": [
              {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "sections",
                      },
                    },
                    {
                      "term": {
                        "class.termId": "202030",
                      },
                    },
                    {
                      "terms": {
                        "sections.campus.keyword": [
                          "Online",
                          "Boston",
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
        "minimum_should_match": 0,
        "must": [],
        "should": {
          "multi_match": {
            "fields": [
              "class.name^2",
              "class.name.autocomplete",
              "class.subject^4",
              "class.classId^3",
              "sections.profs",
              "sections.crn",
              "employee.name^2",
              "employee.email",
              "employee.phone",
            ],
            "query": "fundies",
            "type": "most_fields",
          },
        },
      },
    },
    "size": 0,
    "sort": [
      "_score",
      {
        "class.classId.keyword": {
          "order": "asc",
          "unmapped_type": "keyword",
        },
      },
    ],
  },
  {
    "aggregations": {
      "classType": {
        "terms": {
          "field": "sections.classType.keyword",
          "size": 1000,
        },
      },
    },
    "from": 0,
    "query": {
      "bool": {
        "filter": {
          "bool": {
            "should": [
              {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "sections",
                      },
                    },
                    {
                      "term": {
                        "class.termId": "202030",
                      },
                    },
                    {
                      "terms": {
                        "sections.campus.keyword": [
                          "Online",
                          "Boston",
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
        "minimum_should_match": 0,
        "must": [],
        "should": {
          "multi_match": {
            "fields": [
              "class.name^2",
              "class.name.autocomplete",
              "class.subject^4",
              "class.classId^3",
              "sections.profs",
              "sections.crn",
              "employee.name^2",
              "employee.email",
              "employee.phone",
            ],
            "query": "fundies",
            "type": "most_fields",
          },
        },
      },
    },
    "size": 0,
    "sort": [
      "_score",
      {
        "class.classId.keyword": {
          "order": "asc",
          "unmapped_type": "keyword",
        },
      },
    ],
  },
  {
    "aggregations": {
      "campus": {
        "terms": {
          "field": "sections.campus.keyword",
          "size": 1000,
        },
      },
    },
    "from": 0,
    "query": {
      "bool": {
        "filter": {
          "bool": {
            "should": [
              {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "sections",
                      },
                    },
                    {
                      "term": {
                        "class.termId": "202030",
                      },
                    },
                  ],
                },
              },
              {
                "term": {
                  "type": "employee",
                },
              },
            ],
          },
        },
        "minimum_should_match": 0,
        "must": [],
        "should": {
          "multi_match": {
            "fields": [
              "class.name^2",
              "class.name.autocomplete",
              "class.subject^4",
              "class.classId^3",
              "sections.profs",
              "sections.crn",
              "employee.name^2",
              "employee.email",
              "employee.phone",
            ],
            "query": "fundies",
            "type": "most_fields",
          },
        },
      },
    },
    "size": 0,
    "sort": [
      "_score",
      {
        "class.classId.keyword": {
          "order": "asc",
          "unmapped_type": "keyword",
        },
      },
    ],
  },
  {
    "aggregations": {
      "honors": {
        "terms": {
          "field": "sections.honors",
          "size": 1000,
        },
      },
    },
    "from": 0,
    "query": {
      "bool": {
        "filter": {
          "bool": {
            "should": [
              {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "sections",
                      },
                    },
                    {
                      "term": {
                        "class.termId": "202030",
                      },
                    },
                    {
                      "terms": {
                        "sections.campus.keyword": [
                          "Online",
                          "Boston",
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
        "minimum_should_match": 0,
        "must": [],
        "should": {
          "multi_match": {
            "fields": [
              "class.name^2",
              "class.name.autocomplete",
              "class.subject^4",
              "class.classId^3",
              "sections.profs",
              "sections.crn",
              "employee.name^2",
              "employee.email",
              "employee.phone",
            ],
            "query": "fundies",
            "type": "most_fields",
          },
        },
      },
    },
    "size": 0,
    "sort": [
      "_score",
      {
        "class.classId.keyword": {
          "order": "asc",
          "unmapped_type": "keyword",
        },
      },
    ],
  },
]
`;

exports[`searcher generateMQuery generates with no filters 1`] = `
[
  {
    "aggregations": undefined,
    "from": 0,
    "query": {
      "bool": {
        "filter": {
          "bool": {
            "should": [
              {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "sections",
                      },
                    },
                    {
                      "term": {
                        "class.termId": "202030",
                      },
                    },
                  ],
                },
              },
              {
                "term": {
                  "type": "employee",
                },
              },
            ],
          },
        },
        "minimum_should_match": 0,
        "must": [],
        "should": {
          "multi_match": {
            "fields": [
              "class.name^2",
              "class.name.autocomplete",
              "class.subject^4",
              "class.classId^3",
              "sections.profs",
              "sections.crn",
              "employee.name^2",
              "employee.email",
              "employee.phone",
            ],
            "query": "fundies",
            "type": "most_fields",
          },
        },
      },
    },
    "size": 10,
    "sort": [
      "_score",
      {
        "class.classId.keyword": {
          "order": "asc",
          "unmapped_type": "keyword",
        },
      },
    ],
  },
  {
    "aggregations": {
      "nupath": {
        "terms": {
          "field": "class.nupath.keyword",
          "size": 1000,
        },
      },
    },
    "from": 0,
    "query": {
      "bool": {
        "filter": {
          "bool": {
            "should": [
              {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "sections",
                      },
                    },
                    {
                      "term": {
                        "class.termId": "202030",
                      },
                    },
                  ],
                },
              },
              {
                "term": {
                  "type": "employee",
                },
              },
            ],
          },
        },
        "minimum_should_match": 0,
        "must": [],
        "should": {
          "multi_match": {
            "fields": [
              "class.name^2",
              "class.name.autocomplete",
              "class.subject^4",
              "class.classId^3",
              "sections.profs",
              "sections.crn",
              "employee.name^2",
              "employee.email",
              "employee.phone",
            ],
            "query": "fundies",
            "type": "most_fields",
          },
        },
      },
    },
    "size": 0,
    "sort": [
      "_score",
      {
        "class.classId.keyword": {
          "order": "asc",
          "unmapped_type": "keyword",
        },
      },
    ],
  },
  {
    "aggregations": {
      "subject": {
        "terms": {
          "field": "class.subject.keyword",
          "size": 1000,
        },
      },
    },
    "from": 0,
    "query": {
      "bool": {
        "filter": {
          "bool": {
            "should": [
              {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "sections",
                      },
                    },
                    {
                      "term": {
                        "class.termId": "202030",
                      },
                    },
                  ],
                },
              },
              {
                "term": {
                  "type": "employee",
                },
              },
            ],
          },
        },
        "minimum_should_match": 0,
        "must": [],
        "should": {
          "multi_match": {
            "fields": [
              "class.name^2",
              "class.name.autocomplete",
              "class.subject^4",
              "class.classId^3",
              "sections.profs",
              "sections.crn",
              "employee.name^2",
              "employee.email",
              "employee.phone",
            ],
            "query": "fundies",
            "type": "most_fields",
          },
        },
      },
    },
    "size": 0,
    "sort": [
      "_score",
      {
        "class.classId.keyword": {
          "order": "asc",
          "unmapped_type": "keyword",
        },
      },
    ],
  },
  {
    "aggregations": {
      "classType": {
        "terms": {
          "field": "sections.classType.keyword",
          "size": 1000,
        },
      },
    },
    "from": 0,
    "query": {
      "bool": {
        "filter": {
          "bool": {
            "should": [
              {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "sections",
                      },
                    },
                    {
                      "term": {
                        "class.termId": "202030",
                      },
                    },
                  ],
                },
              },
              {
                "term": {
                  "type": "employee",
                },
              },
            ],
          },
        },
        "minimum_should_match": 0,
        "must": [],
        "should": {
          "multi_match": {
            "fields": [
              "class.name^2",
              "class.name.autocomplete",
              "class.subject^4",
              "class.classId^3",
              "sections.profs",
              "sections.crn",
              "employee.name^2",
              "employee.email",
              "employee.phone",
            ],
            "query": "fundies",
            "type": "most_fields",
          },
        },
      },
    },
    "size": 0,
    "sort": [
      "_score",
      {
        "class.classId.keyword": {
          "order": "asc",
          "unmapped_type": "keyword",
        },
      },
    ],
  },
  {
    "aggregations": {
      "campus": {
        "terms": {
          "field": "sections.campus.keyword",
          "size": 1000,
        },
      },
    },
    "from": 0,
    "query": {
      "bool": {
        "filter": {
          "bool": {
            "should": [
              {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "sections",
                      },
                    },
                    {
                      "term": {
                        "class.termId": "202030",
                      },
                    },
                  ],
                },
              },
              {
                "term": {
                  "type": "employee",
                },
              },
            ],
          },
        },
        "minimum_should_match": 0,
        "must": [],
        "should": {
          "multi_match": {
            "fields": [
              "class.name^2",
              "class.name.autocomplete",
              "class.subject^4",
              "class.classId^3",
              "sections.profs",
              "sections.crn",
              "employee.name^2",
              "employee.email",
              "employee.phone",
            ],
            "query": "fundies",
            "type": "most_fields",
          },
        },
      },
    },
    "size": 0,
    "sort": [
      "_score",
      {
        "class.classId.keyword": {
          "order": "asc",
          "unmapped_type": "keyword",
        },
      },
    ],
  },
  {
    "aggregations": {
      "honors": {
        "terms": {
          "field": "sections.honors",
          "size": 1000,
        },
      },
    },
    "from": 0,
    "query": {
      "bool": {
        "filter": {
          "bool": {
            "should": [
              {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "sections",
                      },
                    },
                    {
                      "term": {
                        "class.termId": "202030",
                      },
                    },
                  ],
                },
              },
              {
                "term": {
                  "type": "employee",
                },
              },
            ],
          },
        },
        "minimum_should_match": 0,
        "must": [],
        "should": {
          "multi_match": {
            "fields": [
              "class.name^2",
              "class.name.autocomplete",
              "class.subject^4",
              "class.classId^3",
              "sections.profs",
              "sections.crn",
              "employee.name^2",
              "employee.email",
              "employee.phone",
            ],
            "query": "fundies",
            "type": "most_fields",
          },
        },
      },
    },
    "size": 0,
    "sort": [
      "_score",
      {
        "class.classId.keyword": {
          "order": "asc",
          "unmapped_type": "keyword",
        },
      },
    ],
  },
]
`;

exports[`searcher generateQuery generates a query without filters 1`] = `
{
  "aggregations": {
    "nupath": {
      "terms": {
        "field": "class.nupath.keyword",
        "size": 1000,
      },
    },
  },
  "from": 0,
  "query": {
    "bool": {
      "filter": {
        "bool": {
          "should": [
            {
              "bool": {
                "must": [
                  {
                    "exists": {
                      "field": "sections",
                    },
                  },
                  {
                    "term": {
                      "class.termId": "202030",
                    },
                  },
                ],
              },
            },
            {
              "term": {
                "type": "employee",
              },
            },
          ],
        },
      },
      "minimum_should_match": 0,
      "must": [],
      "should": {
        "multi_match": {
          "fields": [
            "class.name^2",
            "class.name.autocomplete",
            "class.subject^4",
            "class.classId^3",
            "sections.profs",
            "sections.crn",
            "employee.name^2",
            "employee.email",
            "employee.phone",
          ],
          "query": "fundies",
          "type": "most_fields",
        },
      },
    },
  },
  "size": 10,
  "sort": [
    "_score",
    {
      "class.classId.keyword": {
        "order": "asc",
        "unmapped_type": "keyword",
      },
    },
  ],
}
`;
